@@ -125,7 +125,30 @@ $enrolnext_cols=array('reenroling'=>'reenroling'
 					  ,'spaces'=>'spaces'
 					  );
 
+/* Boarders */
+
+$enrolres_cols=array('reenroled'=>'reenroled'
+				  ,'newenrolments'=>'newenrolments'
+				  ,'leaverssince'=>'leaverssince'
+				  ,'currentroll'=>'currentroll'
+				  ,'budgetroll'=>'budgetroll'
+				  ,'capacity'=>'capacity'
+				  ,'spaces'=>'spaces'
+				  );
+$enrolresnext_cols=array('reenroling'=>'reenroling'
+					  ,'pending'=>'pending'
+					  ,'transfersin'=>'transfersin'
+					  ,'newenrolments'=>'newenrolments'
+					  ,'leavers'=>'leavers'
+					  ,'projectedroll'=>'projectedroll'
+					  ,'targetroll'=>'targetroll'
+					  ,'budgetroll'=>'budgetroll'
+					  ,'capacity'=>'capacity'
+					  ,'spaces'=>'spaces'
+					  );
+
 $tables=array('appnext'=>$appnext_cols,'enrolnext'=>$enrolnext_cols,'appcurrent'=>$app_cols,'enrolcurrent'=>$enrol_cols);
+//$tables=array('enrolresnext'=>$enrolresnext_cols,'enrolrescurrent'=>$enrolres_cols);
 $Stats['tables']=array();
 $Stats['tables']['table']=array();
 foreach($tables as $tablename=>$table_cols){
@@ -144,6 +167,7 @@ foreach($tables as $tablename=>$table_cols){
 	}
 
 $Stats['DateStamp']=display_date($todate);
+//$Stats['Transform']='admission_tables_boarding';
 $Stats['Transform']='admission_tables';
 $Stats['Paper']='landscape';
 
